--- a/package.json
+++ b/package.json
@@ -3,5 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Tim",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0",
+    "mochawesome": "^4.1.0",
+    "yargs": "^15.3.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
+  "scripts": {
+    "test": "mocha --require babel-register"
+  }
 }
