--- a/package.json
+++ b/package.json
@@ -5,9 +5,26 @@
   "author": "Tim",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/node": "^7.10.1",
+    "@babel/plugin-transform-classes": "^7.10.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
+    "coffeescript": "^2.5.1",
     "mocha": "^7.2.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --require babel-polyfill test/**/*.js",
+    "babel": "babel test --out-dir dist --extensions '.js' --copy-files"
   }
 }
